--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,11 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+      with:
+        repository: RPi-Distro/rpi-image-gen
+        path: rpi-image-gen
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Docker
       uses: docker/setup-buildx-action@v3
