--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         IG_USE_PODMAN: "0"
       run: |
         cd rpi-image-gen
-        sudo IG_USE_PODMAN=0 ./build.sh ../config/image.ini ../profile/pibooth.profile
+        sudo ./build.sh ../config/image.ini ../profile/pibooth.profile
 
     - name: Upload image
       uses: actions/upload-artifact@v4
