--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      IG_USE_PODMAN: "0"
 
     steps:
     - name: Checkout repository
@@ -32,7 +30,7 @@ jobs:
     - name: Build image (legacy)
       run: |
         cd rpi-image-gen
-        sudo ./build.sh ../config/image.ini ../profile/pibooth.profile
+        sudo IG_USE_PODMAN=0 ./build.sh ../config/image.ini ../profile/pibooth.profile
 
     - name: Upload image
       uses: actions/upload-artifact@v4
