--- a/config/image.ini
+++ b/config/image.ini
@@ -1,6 +1,6 @@
 [general]
-device = pi5
-profile = bookworm/apt-min64
+device = pi4
+profile = bookworm/apt-min
 image_name = pibooth-os
 hostname = pibooth
 username = pi
