--- a/config/image.ini
+++ b/config/image.ini
@@ -1,6 +1,6 @@
 [general]
 device = pi4
-profile = bookworm/apt-min
+profile = bookworm/debootstrap-min
 image_name = pibooth-os
 hostname = pibooth
 username = pi
